need to add a static path to pelicanconf.py to have a image folder in output directory...i am still needing to change the write the relative paths by normal convention and can not get the {filename} convention suggested by the docs

--- a/blogs/winning_prct/Home-Field-Advantage.ipynb
+++ b/blogs/winning_prct/Home-Field-Advantage.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The best teams are the ones that can persist through a long, arduous 162 game season.  I mean, that's the reason for a 7 game series, right? I dunno, probably not sound logic on my part, but that's just what I thought.  So, I was talking with my recently-converted-from-cricket-to-baseball-fanatic friend who told me he looked at all the games from 1970 to present day.  The home team won 54% of the time!  I mean, thats a pretty large sample size and he gave me a very convincing p-value.  But, c'mon, there's probably got to be some other reason for it, right?  I mean his sample was biased, for sure!  He only looked at seasons in recent history.  Technology in recent years has probably allowed for innumerable methods for the home team to cheat.  Tiny cameras in the batter's eye relaying signs to the dugout. Managers communicating these signs to the headpiece installed in the hitter's helmet.  Visiting team bat boys and as spies, collecting intelligence and rearranging sunflower seed stashes as a type of psychological warfare.  I mean one time I saw the Phillie Phanatic win the affection of the 3rd base umpire so much so that they broke out into a dance number in the middle of the 6th!  Iggy the Iguana once swallowed an umpire whole! (__Figure 1.__)  \n",
     "\n",
-    "<img src=iggy.jpg>\n",
+    "<center><img src=images/iggy.jpg></center>\n",
     "<center><b>Figure 1.</b> Home field Advantage.</center>\n",
     "\n",
     "My point is that the significance he saw is due to recent changes in the game. Surely, I would still be right. It's the nature of baseball; advantages like home field don't exist.  Given a large enough sample size, the winner is the better team.  I decided to look at the home team advantage since the beginning of baseball.  I downloaded the information from [retrosheet.org](http://www.retrosheet.org/) and stored it in a folder called `seasons`.  Each file is a named by season with the prefix GL for Game Log.  I used the Python module [`glob`](https://docs.python.org/2/library/glob.html) to aggregate them all.  "
@@ -536,7 +536,7 @@
    "source": [
     "Needless to say, I was quite shocked.  In all of baseball...from 1871-2016...the visiting team never had a significant advantage.  In fact, it was the exact opposite of what I thought.  This advantage has leveled out since the beginning of baseball.  So, my friend and I were discussing the reasons for the higher advantage.  It seems to fit in the dead ball era, for one.  Another hypothesis could be the interesting dimensions of parks back then.  Take the Polo Grounds for example (__Figure 2.__).\n",
     "\n",
-    "<img src=pologrounds.gif.>\n",
+    "<center><img src=images/pologrounds.gif.></center>.\n",
     "<center><b>Figure 2.</b> Polo Grounds dimensions. (src=http://www.andrewclem.com/Baseball/PoloGrounds.html)</center>."
    ]
   },
