changed pologround to jpg

--- a/blogs/winning_prct/Home-Field-Advantage.ipynb
+++ b/blogs/winning_prct/Home-Field-Advantage.ipynb
@@ -536,7 +536,7 @@
    "source": [
     "Needless to say, I was quite shocked.  In all of baseball...from 1871-2016...the visiting team never had a significant advantage.  In fact, it was the exact opposite of what I thought.  This advantage has leveled out since the beginning of baseball.  So, my friend and I were discussing the reasons for the higher advantage.  It seems to fit in the dead ball era, for one.  Another hypothesis could be the interesting dimensions of parks back then.  Take the Polo Grounds for example (__Figure 2.__).\n",
     "\n",
-    "<center><img src=images/pologrounds.gif.></center>.\n",
+    "<center><img src=images/PoloGrounds.jpg></center>.\n",
     "<center><b>Figure 2.</b> Polo Grounds dimensions. (src=http://www.andrewclem.com/Baseball/PoloGrounds.html)</center>."
    ]
   },
